--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -42,7 +42,7 @@ layout: default
 
          <!-- Need to check if user can edit the post -->
          <script>  
-          function editPage(filePath) {
+          /*function editPage(filePath) {
             console.log("edit button is clicked!");            
             console.log("Page Path: " + filePath);
 
@@ -76,7 +76,7 @@ layout: default
             console.log('edit Page done!')
             //Go to Edit post page and populate the retrieved data
            
-          }
+          }*/
 
           
         </script>
