--- a/_sass/so-simple/_buttons.scss
+++ b/_sass/so-simple/_buttons.scss
@@ -85,7 +85,7 @@ $button-active-blue: #1669F2;
   margin-top: 16px;
 }
 
-#user-info {
+.user-info {
   float: right;
   font-family: 'Open Sans';
   margin-bottom: 8px;
