--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,19 +25,21 @@ layout: default
           {{ content }}
         </div> 
        
-        <div>
-          {% assign edit-url = '/edit-post?filePath='| relative_url %}      
-          <a href="{{ edit-url | relative_url }}{{ page.path }} "> 
-            <svg fill="codepen" height="20" width="20" viewBox="0 0 40 40" class="" aria-hidden="true"><g><path d="m34.5 11.7l-3 3.1-6.3-6.3 3.1-3q0.5-0.5 1.2-0.5t1.1 0.5l3.9 3.9q0.5 0.4 0.5 1.1t-0.5 1.2z m-29.5 17.1l18.4-18.5 6.3 6.3-18.4 18.4h-6.3v-6.2z"></path></g></svg>
-            Edit this page  
-          </a>          
-        </div> 
-        <div>          
-          <a href="{{ site.posts-url }}/{{ page.path }}" class="link-edit">
-            <svg fill="codepen" height="20" width="20" viewBox="0 0 40 40" class="" aria-hidden="true"><g><path d="m34.5 11.7l-3 3.1-6.3-6.3 3.1-3q0.5-0.5 1.2-0.5t1.1 0.5l3.9 3.9q0.5 0.4 0.5 1.1t-0.5 1.2z m-29.5 17.1l18.4-18.5 6.3 6.3-18.4 18.4h-6.3v-6.2z"></path></g></svg>
-            Edit this page on GitHub repository
-          </a>
-        </div>   
+        <div class="link-footer-container">
+          <span class="link-footer link-left">
+            {% assign edit-url = '/edit-post?filePath='| relative_url %}      
+            <a href="{{ edit-url | relative_url }}{{ page.path }} "> 
+              <svg fill="codepen" height="20" width="20" viewBox="0 0 40 40" class="" aria-hidden="true"><g><path d="m34.5 11.7l-3 3.1-6.3-6.3 3.1-3q0.5-0.5 1.2-0.5t1.1 0.5l3.9 3.9q0.5 0.4 0.5 1.1t-0.5 1.2z m-29.5 17.1l18.4-18.5 6.3 6.3-18.4 18.4h-6.3v-6.2z"></path></g></svg>
+              Edit this page  
+            </a>          
+          </span> 
+          <span class="link-footer link-right">
+            <a href="{{ site.posts-url }}/{{ page.path }}" class="link-edit">
+              <svg fill="codepen" height="20" width="20" viewBox="0 0 40 40" class="" aria-hidden="true"><g><path d="m34.5 11.7l-3 3.1-6.3-6.3 3.1-3q0.5-0.5 1.2-0.5t1.1 0.5l3.9 3.9q0.5 0.4 0.5 1.1t-0.5 1.2z m-29.5 17.1l18.4-18.5 6.3 6.3-18.4 18.4h-6.3v-6.2z"></path></g></svg>
+              Edit this page on GitHub repository
+            </a>
+          </span> 
+        </div>
 
         {% if page.share %}
           {% include social-share.html %}
