Update styles to text align page headers

--- a/_sass/so-simple/_page.scss
+++ b/_sass/so-simple/_page.scss
@@ -306,6 +306,8 @@ h1, .h1 {
 .layout--category,
 .layout--tag,
 .layout--collection,
+.layout--new-post,
+.layout--edit-post,
 .layout--search {
   .page-wrapper {
     max-width: $main-max-width;
