Moved cdn js and css to local

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,7 @@
     {% include skip-links.html %}
     {% include navigation.html %}
     {% include masthead.html %}
+    {% include quill-scripts.html %}
 
     {{ content }}
 
