--- a/_sass/so-simple.scss
+++ b/_sass/so-simple.scss
@@ -20,6 +20,7 @@
 /* Components */
 @import "so-simple/global";
 @import "so-simple/home";
+@import "so-simple/navigation";
 @import "so-simple/page";
 @import "so-simple/404";
 @import "so-simple/author";
