--- a/_sass/so-simple/_home.scss
+++ b/_sass/so-simple/_home.scss
@@ -98,6 +98,7 @@
   
     .dev-avatar {
       position: absolute;
+      z-index: -1;
       top: 8px;
       display: inline-flex;
       color: #fff;
