--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,21 @@
 {% if site.data.navigation %}
-  <div class="navigation-wrapper">
+  <nav id="navigation-menu" class="navigation-menu js-nav-menu">
+    <div id="js-nav-menu-toggle" class="navigation-menu__toggle js-nav-menu-toggle">
+      <span class="navigation-menu__bars"></span>
+    </div>
+    <ul class="menu-list">
+      {%- for link in site.data.navigation -%}
+        {%- if link.url contains '://' -%}
+          {%- assign url = link.url -%}
+        {%- else -%}
+          {%- assign url = link.url | relative_url -%}
+        {%- endif -%}
+        <li class="menu-list__item"><a href="{{ url }}">{{ link.title }}</a></li>
+      {%- endfor -%}
+    </ul>
+  </nav>
+
+  <!-- <div class="navigation-wrapper">
     <a href="#menu-toggle" id="menu-toggle">{{ site.data.text[site.locale].menu_label | default: 'Menu' }}</a>
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
@@ -13,5 +29,5 @@
         {%- endfor -%}
       </ul>
     </nav>
-  </div><!-- /.navigation-wrapper -->
+  </div> -->
 {% endif %}
