--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 {% if site.data.navigation %}
-  <div class="navigation-wrapper">
+  <!-- <div class="navigation-wrapper">
     <a href="#menu-toggle" id="menu-toggle">{{ site.data.text[site.locale].menu_label | default: 'Menu' }}</a>
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
@@ -13,5 +13,52 @@
         {%- endfor -%}
       </ul>
     </nav>
-  </div><!-- /.navigation-wrapper -->
+  </div> -->
+  <div class="navigation">
+    <div class="userBx">
+      <div class="imgBx">
+        <img src="user.jpg" alt="user avatar" />
+      </div>
+      <p class="username">CSSScript</p>
+    </div>
+    <div class="menuToggle"></div>
+    <ul class="menu">
+      <li>
+        <a href="#"><ion-icon name="person-outline"></ion-icon>Profile</a>
+      </li>
+      <li>
+        <a href="#"
+          ><ion-icon name="chatbubble-outline"></ion-icon>Messages</a
+        >
+      </li>
+      <li>
+        <a href="#"
+          ><ion-icon name="notifications-outline"></ion-icon>Notification</a
+        >
+      </li>
+      <li>
+        <a href="#"><ion-icon name="settings-outline"></ion-icon>Settings</a>
+      </li>
+      <li>
+        <a href="#"><ion-icon name="log-out-outline"></ion-icon>Logout</a>
+      </li>
+    </ul>
+  </div>
+
+  <!-- <script
+    type="module"
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+  ></script>
+  <script
+    nomodule
+    src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+  ></script> -->
+
+  <script>
+    let menuToggle = document.querySelector(".menuToggle");
+    let navigation = document.querySelector(".navigation");
+    menuToggle.onclick = function () {
+      navigation.classList.toggle("active");
+    };
+  </script>
 {% endif %}
