--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,5 +1,5 @@
 {% if site.data.navigation %}
-  <div class="navigation-wrapper">
+  <!-- <div class="navigation-wrapper">
     <a href="#menu-toggle" id="menu-toggle">{{ site.data.text[site.locale].menu_label | default: 'Menu' }}</a>
     <nav id="primary-nav" class="site-nav animated drop">
       <ul>
@@ -13,5 +13,31 @@
         {%- endfor -%}
       </ul>
     </nav>
-  </div><!-- /.navigation-wrapper -->
+  </div> -->
+  <div class="circle-container">
+    <div class="circle">
+      <button id="kanga">
+        <i class="fas fa-times"></i>
+      </button>
+      <button id="fongola">
+        <i class="fas fa-bars"></i>
+      </button>
+    </div>
+  </div>
+  <nav>
+    <ul>
+      <li><i class="fas fa-home"></i> Accueil</li>
+      <li><i class="fas fa-user-alt"></i> A propos</li>
+      <li><i class="fas fa-envelope"></i> Recevoir Jesus</li>
+    </ul>
+  </nav>
+  <script>
+    const fongola = document.getElementById('fongola')
+    const kanga = document.getElementById('kanga')
+    const container = document.querySelector('.container')
+
+    fongola.addEventListener('click', () => container.classList.add('lakisa-menu'))
+
+    kanga.addEventListener('click', () => container.classList.remove('lakisa-menu'))
+  </script>
 {% endif %}
