--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,4 +1,4 @@
-{% if site.data.navigation %}
+<!-- {% if site.data.navigation %}
   <div class="navigation-wrapper">
     <a href="#menu-toggle" id="menu-toggle">{{ site.data.text[site.locale].menu_label | default: 'Menu' }}</a>
     <nav id="primary-nav" class="site-nav animated drop">
@@ -13,5 +13,5 @@
         {%- endfor -%}
       </ul>
     </nav>
-  </div><!-- /.navigation-wrapper -->
-{% endif %}
+  </div>
+{% endif %} -->
