--- a/_sass/so-simple/_navigation.scss
+++ b/_sass/so-simple/_navigation.scss
@@ -3,22 +3,11 @@
 * { box-sizing: border-box; }
 
 $body-bg: #84a0f4;
-$button-bg: #5c67ff;
+$button-bg: #3b5998;
 $list-bg: #fff;
 $text-color: #1c3991;
 $text-color-hover: #5c67ff;
 $menu-icon-transition: transform 300ms cubic-bezier(0.52, -0.80, 0.52, 0.52);
-
-body {
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: $body-bg;
-  background-image: linear-gradient(to top, #84a0f4 0%, #c2e9fb 100%);
-  font-family: 'Montserrat', sans-serif;
-}
 
 .list-container {
   position: relative;
@@ -63,6 +52,7 @@ body {
   border-radius: 50%;
   width: 50px;
   height: 50px;
+  margin: 12px;
   border: none;
   padding: 0;
   cursor: pointer;
@@ -73,7 +63,6 @@ body {
   color: #fff;
   position: relative;
   z-index: 2;
-  
   
   &:hover, &:focus {
     box-shadow: 0px 0px 0px 8px rgba(92,103,255,0.3);
@@ -86,17 +75,20 @@ body {
     background-color: $list-bg;
     border-radius: 8px;
     list-style-type: none;
-    width: 140px;
-    height: 170px;
+    // width: 140px;
+    // height: 170px;
     box-shadow: 0px 0px 4px 4px rgba(150, 157, 249, 0.16);
-    padding: 0;
+    // padding: 0;
     padding: 6px;
     position: absolute;
-    right: 24px;
-    bottom: 0;
+    // right: 24px;
+    left: 24px;
+    // bottom: 0;
+    top: 0;
     opacity: 0;
     transform: scale(0);
-    transform-origin: bottom right;
+    // transform-origin: bottom right;
+    transform-origin: top left;
     transition : all .3s ease .1s;
     
     li { opacity: 0; }
@@ -161,22 +153,22 @@ body {
   }
 }
 
-.socials {
-  position: fixed;
-  bottom: 16px;
-  right: 16px;
-  display: flex;
-  align-items: center;
-}
+// .socials {
+//   position: fixed;
+//   bottom: 16px;
+//   right: 16px;
+//   display: flex;
+//   align-items: center;
+// }
 
-.social-link {
-  color: #fff;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  text-decoration: none;
-  margin-right: 12px;
-}
+// .social-link {
+//   color: #fff;
+//   display: flex;
+//   align-items: center;
+//   cursor: pointer;
+//   text-decoration: none;
+//   margin-right: 12px;
+// }
 
 .menu-icon-wrapper {
   border-radius: 2px;
